samples/_failures_safe/1761551118_b57587_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_98bcbc79.c: In function ‘main’:
./samples/SAFE/__tmp_98bcbc79.c:177: error: expected ‘(’ at end of input
./samples/SAFE/__tmp_98bcbc79.c:176:5: error: expected declaration or statement at end of input
  176 |     } while
      |     ^
